Fix Gradle IDEA task so that tests can be run through IntelliJ
Fixes issue #2.

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ plugins {
     id 'maven-publish'
 }
 
+apply from: "${rootDir}/gradle/idea-test-kit-fix.gradle"
+
 task createClasspathManifest {
     def outputDir = file("$buildDir/$name")
 
