--- a/build.gradle
+++ b/build.gradle
@@ -90,7 +90,7 @@ bintray {
     user = System.env.BINTRAY_USER
     key = System.env.BINTRAY_KEY
     pkg {
-        repo = 'releases'
+        repo = 'releases-internal'
         name = 'gradle-docker-test-runner'
         userOrg = 'palantir'
         licenses = ['Apache-2.0']
@@ -117,7 +117,8 @@ pluginBundle {
 }
 
 publishPlugins.onlyIf {
-    project.version ==~ /\d+\.\d+\.\d+/
+    //project.version ==~ /\d+\.\d+\.\d+/
+    false
 }
 
 jacocoTestReport {
