--- a/build.gradle
+++ b/build.gradle
@@ -72,7 +72,7 @@ bintray {
     user = System.env.BINTRAY_USER
     key = System.env.BINTRAY_KEY
     pkg {
-        repo = 'releases-internal'
+        repo = 'releases'
         name = 'gradle-docker-test-runner'
         userOrg = 'palantir'
         licenses = ['Apache-2.0']
