--- a/circle.yml
+++ b/circle.yml
@@ -6,6 +6,11 @@ machine:
   environment:
     TERM: dumb
 
+checkout:
+  post:
+    - "[[ ! -s \"$(git rev-parse --git-dir)/shallow\" ]] || git fetch --unshallow"
+    - git fetch --tags --all --prune
+
 dependencies:
   override:
     - docker pull nimmis/java-centos:openjdk-8-jdk
@@ -25,4 +30,3 @@ deployment:
     tag: /[0-9]+(\.[0-9]+)+/
     commands:
       - ./gradlew -i bintrayUpload
-      - ./gradlew -i -Dgradle.publish.key=$GRADLE_KEY -Dgradle.publish.secret=$GRADLE_SECRET publishPlugins
