--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.gradle.plugin-publish' version '0.9.2'
     id 'com.jfrog.bintray' version '1.5'
+    id 'com.jfrog.artifactory' version '4.0.0'
     id 'com.palantir.git-version' version '0.4.0'
     id 'com.github.kt3k.coveralls' version '2.6.3'
     id 'eclipse'
@@ -42,7 +43,7 @@ if (System.env.CIRCLE_TEST_REPORTS) {
     test.reports.junitXml.destination = new File(System.env.CIRCLE_TEST_REPORTS, getName())
 }
 
-group 'com.palantir.gradle.dockertestrunner'
+group 'com.palantir.dockertestrunner'
 version gitVersion()
 sourceCompatibility = 1.7
 
@@ -67,6 +68,23 @@ publishing {
         }
     }
 }
+
+artifactory {
+    publish {
+        contextUrl = 'https://oss.jfrog.org/artifactory'
+        repository {
+            repoKey = (project.version =~ /-/ ? 'oss-snapshot-local' : 'oss-release-local')
+            username = System.env.BINTRAY_USER
+            password = System.env.BINTRAY_KEY
+            maven = true
+        }
+        defaults {
+            publications (publishing.publications.jfrog)
+            properties = ['git': project.version]
+        }
+    }
+}
+artifactoryPublish.dependsOn 'generatePomFileForJfrogPublication', 'sourceJar', 'build'
 
 bintray {
     user = System.env.BINTRAY_USER
