--- a/circle.yml
+++ b/circle.yml
@@ -26,6 +26,10 @@ test:
     - ./gradlew jacocoTestReport coveralls
 
 deployment:
+  develop:
+    branch: develop
+    commands:
+      - ./gradlew -i artifactoryPublish
   release:
     tag: /[0-9]+(\.[0-9]+)+/
     commands:
