--- a/src/main/resources/META-INF/gradle-plugins/com.palantir.docker-test-runner.properties
+++ b/src/main/resources/META-INF/gradle-plugins/com.palantir.docker-test-runner.properties
@@ -1,1 +1,1 @@
-implementation-class=com.palantir.gradle.dockertestrunner.DockerTestRunnerPlugin
+implementation-class=com.palantir.dockertestrunner.DockerTestRunnerPlugin
