Add features and refactor
* Add name property to runners
* Ability to add individual runners
* Ability to customize Test and JacocoReport tasks using closures
* Global and per-runner configuration
* Non-integration unit tests
* Ensure test environments are run in the order they are specified
* Update README
* Update circle.yml to save reports as artifacts

--- a/build.gradle
+++ b/build.gradle
@@ -126,3 +126,19 @@ jacocoTestReport {
         xml.enabled true
     }
 }
+
+if (System.env.CIRCLE_ARTIFACTS) {
+    task copyCiArtifactsToCircle {
+        outputs.upToDateWhen { false }
+        doLast {
+            [
+                file("${buildDir}/reports"), // jacoco, checkstyle, findbugs
+            ].each { src ->
+                copy {
+                    from src
+                    into "${System.env.CIRCLE_ARTIFACTS}/${project.name}/${src.name}"
+                }
+            }
+        }
+    }
+}
