--- a/circle.yml
+++ b/circle.yml
@@ -28,6 +28,6 @@ deployment:
     commands:
       - ./gradlew -i artifactoryPublish
   release:
-    tag: /[0-9]+(\.[0-9]+)+/
+    tag: /\d+\.\d+\.\d+(-rc[0-9]+)?/
     commands:
       - ./gradlew -i bintrayUpload
