Update circle.yml settings to improve speed and stability

--- a/build.gradle
+++ b/build.gradle
@@ -140,3 +140,14 @@ if (System.env.CIRCLE_ARTIFACTS) {
         }
     }
 }
+
+task resolveDependencies {
+    description = 'Forces the resolution of all dependencies in all configurations'
+    group = 'build'
+
+    doLast {
+        configurations.all { c ->
+            c.resolve()
+        }
+    }
+}
