Use Java Gradle Plugin Development plugin
Remove the createClasspathManifest task
and use classpath injection provided by
Java Gradle Plugin Development plugin

--- a/build.gradle
+++ b/build.gradle
@@ -7,20 +7,9 @@ plugins {
     id 'eclipse'
     id 'groovy'
     id 'idea'
+    id 'java-gradle-plugin'
     id 'jacoco'
     id 'maven-publish'
-}
-
-task createClasspathManifest {
-    def outputDir = file("$buildDir/$name")
-
-    inputs.files sourceSets.main.runtimeClasspath
-    outputs.dir outputDir
-
-    doLast {
-        outputDir.mkdirs()
-        file("$outputDir/plugin-classpath.txt").text = sourceSets.main.runtimeClasspath.join("\n")
-    }
 }
 
 repositories {
@@ -29,12 +18,11 @@ repositories {
 
 dependencies {
     compile gradleApi()
+    compile 'com.google.guava:guava:19.0'
 
-    testCompile gradleTestKit()
     testCompile('org.spockframework:spock-core:1.0-groovy-2.4') {
         exclude module: 'groovy-all'
     }
-    testCompile files(createClasspathManifest)
 }
 
 if (System.env.CIRCLE_TEST_REPORTS) {
