--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,6 @@
 machine:
+  pre:
+    - curl -sSL https://s3.amazonaws.com/circle-downloads/install-circleci-docker.sh | bash -s -- 1.10.0
   services:
     - docker
   java:
@@ -12,6 +14,8 @@ checkout:
     - git fetch --tags --all --prune
 
 dependencies:
+  pre:
+    - sudo pip install docker-compose
   override:
     - ./gradlew resolveDependencies
 
